--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "bootstrap": "^4.5.3",
     "cra-template": "1.0.3",
     "firebase": "^8.0.2",
+    "google-maps-react": "^2.0.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-loading-skeleton": "^2.1.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
