--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "base64-img": "^1.0.4",
     "bootstrap": "^4.5.3",
     "cra-template": "1.0.3",
     "firebase": "^8.0.2",
     "google-maps-react": "^2.0.6",
+    "image-to-base64": "^2.2.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
+    "react-image-gallery": "^1.1.1",
     "react-loading-skeleton": "^2.1.1",
     "react-redux": "^7.2.2",
+    "react-responsive-carousel": "^3.2.19",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
