--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "sweetalert2": "^11.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
